--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node-pg-migrate",
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +17,17 @@
   "type": "commonjs",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
-    "auto-bind": "^5.0.1",
+    "auto-bind": "^4.0.0",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
     "nanoid": "^5.1.5",
     "node-pg-migrate": "^8.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0"
   }
 }
