--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.844.0",
     "@hapi/hapi": "^21.4.0",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.8",
     "auto-bind": "^4.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
@@ -25,7 +28,8 @@
     "nanoid": "^5.1.5",
     "node-pg-migrate": "^8.0.3",
     "nodemon": "^3.1.10",
-    "pg": "^8.16.1"
+    "pg": "^8.16.1",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
